                          WebAuth Change History

WebAuth 3.2.0 (in progress)

WebAuth 3.1.2 (2003-05-29)

 *) mod_webauthldap: Added mutexes around the entire ldap operation to 
    avoid GSSAPI thread safety issues.  All server_rec structures are now 
    initialized, correctly supporting multiple virtual host 
    configurations.  Refactored ldap binds for better failback support,
    fixing a double free memory error.  Additional memory cleanup for 
    krb5 TGT operations. Fixed memory leak related to unbind after 
    connection expiry, via ignoring SIGPIPE.

 *) mod_webauth: Correctly construct the return url for reverse proxies 
   (explicitly compare r->proxyreq to PROXYREQ_PROXY instead of testing 
   for != PROXYREQ_NONE, which also matched PROXYREQ_REVERSE.

 *) mod_webauth: Don't try to attr decode a zero length service token 
    cache file.  Log a warning and return NULL like there was no file.

 *) Update configure.ac to check for netinet/in.h for windows build.

 *) Modify wa_keyring to not use getopt (not available on windows),
    and change strftime format from %T to %H:%M:%S (%T also not available
    on windows strftime).

 *) Fix a bug in libwebauth/krb5.c where we would try to call
    krb5_free_context on a NULL context.

 *) Expanded the libgcc linking hack to apply to all of the module builds
    rather than just the cURL link flags, since it showed up on Solaris 7
    affecting mod_webauthldap as well.  This fix is specific to Solaris.

 *) Ported the test suite driver to AIX 4.3 and tweaked the OpenLDAP
    library probe to handle operating systems without shared library
    dependencies.

 *) Fixed the installation rule for the test suite to properly honor
    DESTDIR.

 *) Cleaned up the sample configuration files somewhat and made them more
    consistent with each other.

WebAuth 3.1.1 (2003-05-08)

 *) Fixed HTML_TEMPLATE_ROOT in src/webkdc/logout.fcgi script by
    changing the path to relative instead of absolute.
